--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <body>
         <section>
             <h1>Discover hidden places in the world around you</h1>
-            <p>Download Excursion (Coming soon!)</p>
+            <p class="link">Download Excursion (Coming soon!)</p>
+            <video src="resources/excursion.mp4">This video could not be loaded :(</video>
         </section>
+        <section>
+            <h2>Your personal travel guide</h2>
+            <p class="app-description">Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="resources/camp.jpg"/>
+        </section>
+        <section>
+            <img src="resources/phone.png"/>
+            <h2>Coming Soon for iPhone and Android</h2>
+            <p class="link">Download Excursion (Coming soon!)</p>
+        </section>
+        <footer>
+            
+        </footer>
     </body>
 </html>
