--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="link">Download Excursion (Coming soon!)</p>
         </section>
         <footer>
-            
+            <p>&copy;Excursion</p>
         </footer>
     </body>
 </html>
