HTML correction and CSS style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <section>
             <h1>Discover hidden places in the world around you</h1>
-            <p class="link">Download Excursion (Coming soon!)</p>
+            <a class="link">Download Excursion (Coming soon!)</a>
             <video src="resources/excursion.mp4">This video could not be loaded :(</video>
         </section>
         <section>
@@ -18,10 +18,10 @@
         <section>
             <img src="resources/phone.png"/>
             <h2>Coming Soon for iPhone and Android</h2>
-            <p class="link">Download Excursion (Coming soon!)</p>
+            <a class="link">Download Excursion (Coming soon!)</a>
         </section>
         <footer>
-            <p>&copy;Excursion</p>
+            <p class="copyright">&copy;Excursion</p>
         </footer>
     </body>
 </html>
