HTML video and link plus CSS style for app description

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <body>
         <section>
             <h1>Discover hidden places in the world around you</h1>
-            <a class="link">Download Excursion (Coming soon!)</a>
-            <video src="resources/excursion.mp4">This video could not be loaded :(</video>
+            <p><a class="link">Download Excursion (Coming soon!)</a></p>
+            <video autoplay>
+                <source src="resources/excursion.mp4" type="video/mp4"/>
+                This video could not be loaded :(
+            </video>
         </section>
         <section>
             <h2>Your personal travel guide</h2>
@@ -16,9 +19,10 @@
             <img src="resources/camp.jpg"/>
         </section>
         <section>
+            <br/>
             <img src="resources/phone.png"/>
             <h2>Coming Soon for iPhone and Android</h2>
-            <a class="link">Download Excursion (Coming soon!)</a>
+            <p><a class="link">Download Excursion (Coming soon!)</a></p>
         </section>
         <footer>
             <p class="copyright">&copy;Excursion</p>
