Video autolay correction

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <section>
             <h1>Discover hidden places in the world around you</h1>
             <p><a class="link">Download Excursion (Coming soon!)</a></p>
-            <video autoplay>
+            <video autoplay muted>
                 <source src="resources/excursion.mp4" type="video/mp4"/>
                 This video could not be loaded :(
             </video>
